02_Edge_Lab_Model_2/scripts/EdgeLab - Single VPC, 1 EC2, 1 WL EC2 - ML.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description:
  CloudFormation template with one VPC, segregated by multiple subnets
  It will deploy one instance for the subnets; PocPublicSubnet1, PocPrivateSubnet1, WLPublicSubnet1, WLPrivateSubnet1

# Mappings for the Deep learning AMI v.40, Ubuntu 18.04
# Take care of all U.S regions if there's a change in the AMI version
Mappings:
  MLAmiRegionMap:
    us-east-1:
      HVM64: ami-072519eedc1730252
    us-east-2:
      HVM64: ami-09f77b37a0d32243a
    us-west-1:
      HVM64: ami-0fe05354c2b605fe4
    us-west-2:
      HVM64: ami-084f81625fbc98fa4

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: ACS-EDGELAB

  PocVpcCIDR:
    Description: Please enter the IP range (CIDR notation) for the VPC
    Type: String
    Default: 10.192.0.0/16
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  CurrentWavelengthAZ:
    Description: Please enter the Availability Zone (AZ) for the Wavelength.
    Type: String
    Default: us-west-2-wl1-sfo-wlz-1

  PocPublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the VPC
    Type: String
    Default: 10.192.6.0/23
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  # WILL BE ABLE TO USE ONCE THE WAVELENGTH ZONE IS OPTED-IN
  WlPocPublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the VPC
    Type: String
    Default: 10.192.0.0/23
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  AdminIPv4Address:
    Description: Please enter the IP address for the admin (e.g. SSH Access)
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'

  KeyName:
    Description: Please select a EC2 key name
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be a valid EC2 instance key pair.

  AmiId:
    Description: Please specify a EC2 AMI ID (optional)
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-ebs"

  DefaultInstanceSizeIntheAZ:
    Description: EC2 type of the instances in the normal AZ
    Type: String
    Default: "t2.micro"
    ConstraintDescription: Must be a valid EC2 instance type.

  DefaultInstanceSizeIntheWLZ:
    Description: EC2 type of the instances in the Wavelength Zone
    Type: String
    Default: "g4dn.2xlarge"
    AllowedValues: ['t3.medium', 't3.xlarge', 'r5.2xlarge', 'g4dn.2xlarge']
    ConstraintDescription: Must be a valid EC2 instance type, approved for use in the Wavelength Zone.

Resources:
  PocVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref PocVpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} VPC

  # GW; CAGW can be implemented. Below the line is a sample
  # Note: VpcId should be the id of the VPC to which the IGW will be attached to!
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} IGW

  CarrierGateway:
    Type: AWS::EC2::CarrierGateway
    Properties:
        VpcId: !Ref PocVPC
        Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} CAGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref PocVPC

  # Public route for the publicly open VPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AzPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Public route for the publicly open VPC, attached to the Wavelength zone
  # Please note that the section 'CarrierGatewayId' is not listed in the official AWS CloudFormation. (as of 10/22/2020)
  WLPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WLPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      CarrierGatewayId: !Ref CarrierGateway

  # Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PocVPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PocPublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-acs-wl-az-subnet-public-dev
        - Key: GatewayType
          Value: Availability Zone
        - Key: SubnetType
          Value: DEV
        - Key: Number
          Value: "1"

  # MapPublicIpOnLaunch: true doesn't work with the WLZ
  WLPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PocVPC
      AvailabilityZone: !Ref CurrentWavelengthAZ
      CidrBlock: !Ref WlPocPublicSubnet1CIDR
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-acs-wl-wz-subnet-public-dev
        - Key: GatewayType
          Value: Wavelength Zone
        - Key: SubnetType
          Value: DEV
        - Key: Number
          Value: "1"

  # Routetables
  AzPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PocVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-az-rt-public

  AzPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AzPublicRouteTable
      SubnetId: !Ref PublicSubnet1

  WLPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PocVPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-wz-rt-public

  WLPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WLPublicRouteTable
      SubnetId: !Ref WLPublicSubnet1

  # EC2
  PublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      KeyName: !Ref KeyName
      InstanceType: !Ref DefaultInstanceSizeIntheAZ
      SubnetId: !Ref PublicSubnet1
      BlockDeviceMappings:
        - DeviceName: "/dev/sdm"
          Ebs:
            VolumeType: gp2
            DeleteOnTermination: true
            VolumeSize: 8
      SecurityGroupIds:
        - !Ref POCBastSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-AZ-PubSN-Inst-01-Bastion
        - Key: Description
          Value: !Sub ${EnvironmentName} Bastion host

  WLPublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [MLAmiRegionMap, !Ref "AWS::Region", HVM64]
      KeyName: !Ref KeyName
      InstanceType: !Ref DefaultInstanceSizeIntheWLZ
      SubnetId: !Ref WLPublicSubnet1
      SecurityGroupIds:
        - !Ref POCMLSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-WLZ-PubSN-Inst-01
        - Key: Description
          Value: !Sub ${EnvironmentName} ML Inferencing Instance in the Wavelength Zone

  # Security Groups
  POCBastSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${EnvironmentName} SG for the Bastion
      GroupName: !Sub ${EnvironmentName}-ACS-WL-SG-Bastion
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} SG for the Bastion
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIPv4Address
          Description: Enable SSH access via port 22
        - IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Ping!
      VpcId: !Ref PocVPC

  POCMLSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${EnvironmentName} SG for the ML Instance
      GroupName: !Sub ${EnvironmentName}-ACS-WL-SG-MLInference
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} SG for the ML Inferencing instance
      VpcId: !Ref PocVPC

  # Rules for the SG
  ## Self-referential rules
  POCBastSGSelfReferentialIngressRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      IpProtocol: "-1"
      SourceSecurityGroupId: !GetAtt POCBastSecurityGroup.GroupId
      GroupId: !GetAtt POCBastSecurityGroup.GroupId

  POCMLSGIngressRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      IpProtocol: "-1"
      SourceSecurityGroupId: !GetAtt POCBastSecurityGroup.GroupId
      GroupId: !GetAtt POCMLSecurityGroup.GroupId

Outputs:
  PocVPC:
    Description: A reference to the created POC VPC
    Value: !Ref PocVPC

  PublicSubnet1:
    Description: A reference to the POC DEV public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  WLPublicSubnet1:
    Description: A reference to the POC DEV public subnet in the 1st Availability Zone (Wavelength Zone)
    Value: !Ref WLPublicSubnet1
